--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@ Layout = null;
 
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>iDEA</title>
   <link rel="stylesheet" type="text/css" href="~/css/style.css">
   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.19.0/font/bootstrap-icons.css">
@@ -48,7 +48,8 @@ Layout = null;
     </button>
     <form class="d-flex mx-2" method="post" action="/Account/Login">
       <input type="text" name="Username" class="form-control me-2" placeholder="Username" required>
-      <input type="password" name="Password" class="form-control me-2" placeholder="Password" required>
+      <input type="password" name="Password"
+       class="form-control me-2" placeholder="Password" required>
       <button type="submit" class="btn btn-primary me-2">Login</button>
     </form>
 
