contact and session done!

--- a/Views/Course/Index.cshtml
+++ b/Views/Course/Index.cshtml
@@ -16,16 +16,16 @@
                         </div>
                     </div>
                     <div class="d-flex border-bottom border-dark">
-                        <div class="p-2 bg-secondary text-white border-end border-dark" style="width:60px;">Credit</div>
+                        <div class="p-2 bg-secondary text-white border-end border-dark" style="width:70px;">Credit</div>
                         <div class="p-2 bg-secondary text-white flex-fill">@course.Credit</div>
                     </div>
                     <div class="d-flex border-bottom border-dark">
-                        <div class="p-2 bg-secondary text-white border-end border-dark" style="width:60px;">Score</div>
+                        <div class="p-2 bg-secondary text-white border-end border-dark" style="width:70px;">Score</div>
                         <div class="p-2 bg-secondary text-white flex-fill">@course.Score</div>
                     </div>
                     <div class="d-flex border-bottom border-dark">
-                        <div class="p-2 bg-secondary text-white border-end border-dark" style="width:60px;">Grade</div>
-                        <div class="p-2 bg-secondary text-white flex-fill">@course.Grade</div>
+                        <div class="p-2 bg-secondary text-white border-end border-dark" style="width:70px;">Grade</div>
+                        <div style="text-align:'center',justift-content:'center';" class="p-2 bg-secondary text-white flex-fill">@course.Grade</div>
                     </div>
                 </div>
             </div>
