--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,6 +43,11 @@
                         <a class="nav-link active" style="color: rgb(250, 239, 210);" aria-current="page"
                             href="#">Duyurular</a>
                     </li>
+                    <li class="nav-item ps-4">
+                        <a class="nav-link active" style="color: rgb(250, 239, 210);" aria-current="page"
+                            href="/Course/Session">Videolar</a>
+                    </li>
+                    
                 </ul>
             </div>
             <a href="" class="nav-item text-light text-decoration-none d-none d-lg-block pe-3">@(User.FindFirstValue(ClaimTypes.GivenName))</a>
@@ -76,6 +81,7 @@
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary text-white">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary text-white">About</a></li>
+                <li class="nav-item"><a href="/Course/Contact" class="nav-link px-2 text-body-secondary text-white">Contact</a></li>
             </ul>
             <p class="text-center text-body-secondary mt-3">© 2023 placeholder company name, Inc</p>
         </div>
