--- a/Views/Course/Contact.cshtml
+++ b/Views/Course/Contact.cshtml
@@ -20,7 +20,7 @@
                   <input type="text" class="mail_text my-1" placeholder="Name" name="text"><br>
                   <input type="text" class="mail_text my-1" placeholder="Email" name="text "><br>
                   <input type="text" class="mail_text my-1" placeholder="Phone Number" name="text"><br>
-                  <textarea class="massage-bt my-1" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea><br>
+                  <textarea class="massage-bt my-1" placeholder="Message" rows="5" id="comment" name="Message"></textarea><br>
                   <button id="send_bt" type="submit">SEND</button>
                 </div>
               </div>
